--- a/ng-video-game-db/src/app/components/home/home.component.html
+++ b/ng-video-game-db/src/app/components/home/home.component.html
@@ -16,25 +16,30 @@
     </mat-form-field>
 </div>
 
-<div class="games">  
-    <div class="game">
-        <div class="game-thumb-container">
-            <img class="game-thumbnail" 
-            src="https://wallpaperaccess.com/full/899965.jpg" 
-            alt=""
-            >
-        </div>
-        
-        <div class="game-description">
-            <p class="game-name">Name</p>
-            <div class="game-platforms">
-                <img 
-                    class="game-platform"
-                    src="https://logos-world.net/wp-content/uploads/2020/11/Xbox-Logo.png"
-                    alt="slug"
-                />
+<div class="games">
+    <ng-container *ngFor="let game of games">
+        <div class="game">
+            <div class="game-thumb-container">
+                <img class="game-thumbnail" 
+                    *ngIf="game.background_image"
+                    src="{{ game.background_image }}" 
+                    alt="thumbnail"
+                >
+                <p *ngIf="!game.background_image">No image</p>
+            </div>
+            
+            <div class="game-description">
+                <p class="game-name">{{ game.name }}</p>
+                <div class="game-platforms">
+                    <img 
+                        *ngFor="let gamePlatform of game.parent_platforms"            
+                        class="game-platform"
+                        src="https://logos-world.net/wp-content/uploads/2020/11/Xbox-Logo.png"
+                        alt="slug"
+                    />
+                </div>
             </div>
         </div>
-    </div>
+    </ng-container>
 </div>
 
